Kevin-Exp/results/fmul_results/gcc.txt
ATR_0228-143544/fmul.c: In function ‘readMemoryByte’:
ATR_0228-143544/fmul.c:53:5: warning: implicit declaration of function ‘asm’ [-Wimplicit-function-declaration]
   53 |     asm(
      |     ^~~
ATR_0228-143544/fmul.c:54:20: error: expected ‘)’ before ‘:’ token
   54 |         ".rept 30;"
      |                    ^
      |                    )
......
   59 |         : "=m"(result_div)
      |         ~           
